syntax = 'proto3'

package inventory

service Inventory {
    rpc checkProductIsExist(CheckProductRequest) returns (CheckProductResponse) {}
}

message CheckProductRequest {
    string productId = 1;
}

message CheckProductResponse {
  string id = 1;
  string name = 2;
  string author = 3;
  repeated string type = 4;
}
